--- a/index.html
+++ b/index.html
@@ -5,24 +5,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cake-to-go</title>
   </head>
-  <body>
-    <header>
-      <h1>Cake-to-go</h1>
-      <p>La pasteleria a tu medida. Hacemos pasteles a tu gusto y los llevamos directo hacia ti o a donde tu nos digas.</p>
+  <body> 
+    <a href="contenido" class="skip-link">Saltar contenido</a>
+    <header class="site-header">
+      <div class="container header-inner">
+        <a href="#" class="brand" aria-label="Ir al inicio">
+          <span class="brand-mark">C</span>
+          <span class="brand-name">Cake-to-go</span>
+        </a>
+        <nav class="nav" aria-label="Navegacion principal">
+          <a href="#nosotros">Sobre nosotros</a>
+          <a href="#nuestrospasteles">Conoce nuestros pasteles</a>
+          <a href="#reviews">Reviews de clientes</a>
+          <a href="#proceso">Pasos para pedir un pastel</a>
+          <a href="#ordena" class="btn btn--sm">Realiza tu pedido</a>
+        </nav>
+      </div>
     </header>
-    <section>
-        <h2>Formulario de datos del comprador</h2>
-        <p>Llena el formulario con tus datos para poder hacer la orden de tu pastel</p>
-        <p>[Aqui va a ir un formulario para los datos del cliente]</p>
-    </section>
-    <section>
-        <h2>Arma tu pastel</h2>
-        <p>[Aqui van a ir varias opciones para poder armar un pastel]</p>
-    </section>
-    <section>
-        <h2>Acepta los terminos y realiza tu pedido</h2>
-        <p>[Aqui van a ir los terminos y condiciones de los pasteles]</p>
-        <p>[Aqui va a ir un boton para confirmar y hacer el pedido]</p>
-    </section>
+
   </body>
 </html>
