Agregando la seccion de Hero con informacion basica

--- a/index.html
+++ b/index.html
@@ -22,6 +22,41 @@
         </nav>
       </div>
     </header>
+    <main id="contenido">
+      <section class="hero" aria-labelledby="hero-title">
+        <div class="container hero-grid">
+          <div class="hero-copy">
+            <h1 id="hero-title">El pastel que quieras entregado a donde quieras</h1>
+            <p class="lead">
+              Arma y ordena el pastel exactamente como lo necesitas. Eliges el tamano, sabor, color y diseno.
+              Una vez armado tu pastel dinos a donde debemos entregarlo. Puede ser a ti mismo o como regalo para otra 
+              persona. 
+            </p>
+            <div class="cta-row">
+              <a href="#registro" class="bti">Ordena tu pastel</a>
+            </div>
+            <dl class="stats" aria-label="Indicadores del curso">
+              <div class="stat">
+                <dt>Diversas opciones para armar tu pastel</dt>
+                <dd>4 tamanos a elegir</dd>
+                <dd>5 sabores de pan disponibles</dd>
+                <dd>4 rellenos que puedes combinar</dd>
+                <dd>Cualquier color que tu decidas</dd>
+              </div>
+            </dl>
+          </div>
+          <figure class="hero-card">
+            <div class="hero-visual" aria-hidden="true"></div>
+            <figcaption>
+              Si no estas seguro del pastel que deseas, nosotros podemos darte ejemplos e ideas de pasteles
+              que hemos elaborado anteriormente y han sido populares con los clientes.
+            </figcaption>
+          </figure>
+        </div>
+      </section>
+
+
+    </main>
 
   </body>
 </html>
