Agregando la seccion de "sobre nosotros". Cuenta de manera breve sobre la idea detras de la pagina.

--- a/index.html
+++ b/index.html
@@ -54,6 +54,29 @@
           </figure>
         </div>
       </section>
+      <section id="nosotros" class="section" aria-labelledby="nosotros-title">
+        <div class="container">
+          <header class="section-head">
+            <h2 id="nosotros-title">Sobre nosotros</h2>
+            <p>Conoce sobre como surgio esta idea</p>
+          </header>
+          <div class="nosotros-body">
+            <p>En la mayoria de las pastelerias te solicitan minimo 5 dias de anticipacion para hacer un pedido personalizado.
+              Otras pocas te ofrecen opciones ya listas para cuando necesitas un pastel de ultimo momento. Sin embargo,
+              las opciones son limitadas y no se adhieren a las preferencias del cliente. Ademas de esto, debes ir 
+              personalmente a la pasteleria a recoger tu pedido. Esto es complicado cuando tienes apuro o tu pasteleria
+              favorita queda a una distancia considerable de tu ubicacion.
+              Nosotros resolvemos todo esto. No tenemos un minimo de dias para hacer un pedido personalizado. Aun si tu
+              pedido es de ultimo momento, nosotros podemos realizarlo. Con nosotros no tienes que conformarte con opciones
+              limitadas. Puedes armar tu pastel casi de cualquier manera que puedas imaginarte. Ademas de esto, ofrecemos
+              entrega a domicilio para que no tengas que venir hasta aca por tu pastel. Quieres obsequiar el pastel a alguien
+              mas? Nosotros lo llevamos hasta donde este. Puedes agregar una dedicatoria a la persona para que sepa quien
+              le esta regalando el pastel. 
+              Asi que no te preocupes, cualquier pastel que necesites de urgencia, nosotros te tenemos cubierto.
+            </p>
+          </div>
+        </div>
+      </section>
 
 
     </main>
