Agregando seccion de "ejemplos de pasteles". Contiene imagenes y descripciones

--- a/index.html
+++ b/index.html
@@ -77,7 +77,40 @@
           </div>
         </div>
       </section>
-
+      <section id="pasteles" class="section" aria-labelledby="pasteles-title">
+        <div class="container">
+          <header class="pasteles-head">
+            <h2 id="pasteles-title">Ejemplos de pasteles</h2>
+            <p>Imagenes de algunos pasteles que hemos elaborado</p>
+          </header>
+          <div class="grid-2">
+            <article class="card">
+              <figure class="pastel-card">
+                <img src="https://assets.giftalove.com/resources/common/giftimages/largeimage/floral-design-vanilla-mothers-day-cake.jpg" alt="pastel"/>
+                <figcaption>
+                  Pastel mediano de vainilla con relleno de mermelada con decoracion de flores.
+                </figcaption>
+              </figure>
+            </article>
+            <article class="card">
+              <figure class="pastel-card">
+                <img src="https://mojo.generalmills.com/api/public/content/QYYSZSvDmU2BEzvW_HnVkg_webp_base.webp?v=4ce198a1&t=191ddcab8d1c415fa10fa00a14351227" alt="pastel"/>
+                <figcaption>
+                  Pastel chico de chocolate con relleno de nutella con decoracion sencilla con frutas.
+                </figcaption>
+              </figure>
+            </article>
+            <article class="card">
+              <figure class="pastel-card">
+                <img src="https://celebritycakestudio.com/cdn/shop/files/Heart_Celebration_Cake_Blue.jpg?v=1722640439" alt="pastel"/>
+                <figcaption>
+                  Pastel mediano de red velvet con relleno de queso crema en forma de corazon azul.
+                </figcaption>
+              </figure>
+            </article>
+          </div>
+        </div>
+      </section>
 
     </main>
 
