Agregando seccion de "reviews" para resenias de clientes

--- a/index.html
+++ b/index.html
@@ -111,6 +111,47 @@
           </div>
         </div>
       </section>
+      <section class="section" id="reviews" aria-labelledby="testimonios-title">
+        <div class="container">
+          <header class="section-head">
+            <h2 id="testimomios-title">Reviews de clientes</h2>
+            <p>Resenas de clientes que ya recibieron sus pasteles</p>
+          </header>
+          <div class="grid-3">
+            <figure class="quote card">
+              <blockquote>
+                "Pedi un pastel para el cumpleanios de mi novia y le encanto. Lo entregaron en su casa bastante rapido."
+              </blockquote>
+              <figcaption>-Adrian</figcaption>
+            </figure>
+            <figure class="quote card">
+              <blockquote>
+                "Habiamos pedido un pastel para el bautizo de mi sobrino en otra pasteleria pero nos quedaron mal un dia
+                antes del evento. Por fortuna en cake-to-go nos pudieron hacer un pastel tal como queriamos a pesar de 
+                pedirlo con poco tiempo de anticipacion. Nos salvaron."
+              </blockquote>
+              <figcaption>-Luis</figcaption>
+            </figure>
+            <figure class="quote card">
+              <blockquote>
+                "Estuve muy resfriada el dia que cumplia anios mi mejor amiga. De verdad queria darle un regalo pero
+                no podia salir de mi casa. Por suerte mi hermana me recomendo cake-to-go y pude mandarle un bonito
+                pastel a mi amiga de regalo."
+              </blockquote>
+              <figcaption>-Laura</figcaption>
+            </figure>
+            <figure class="quote card">
+              <blockquote>
+                "Habia visto un pastel muy bonito en Pinterest y queria uno igual para mi cumpleanios. Fui a varias
+                pastelerias pero en todas me dijeron que no podian hacerlo igual, solo parecido. En cake-to-go me 
+                aseguraron que podrian hacer uno practicamente igual. La verdad el que me entregaron era aun mas
+                bonito que el de Pinterest. Muy recomendado"
+              </blockquote>
+              <figcaption>-Clau</figcaption>
+            </figure>
+          </div>
+        </div>
+      </section>
 
     </main>
 
