Agregando una pequena seccion "proceso" que indica los pasos a seguir para hacer un pedido

--- a/index.html
+++ b/index.html
@@ -152,6 +152,25 @@
           </div>
         </div>
       </section>
+      <section id="proceso" class="section" aria-labelledby="proceso-title">
+        <div class="container">
+          <header class="section-head">
+            <h2 id="temario-title">Pasos a seguir para ordenar</h2>
+          </header>
+          <div class="grid-4">
+            <article class="card">
+              <ol class="list">
+                <li>Llenar el formulario con los datos del cliente. </li>
+                <li>Llenar la direccion a la cual vamos a entregar el pastel. </li>
+                <li>Si el pastel es un regalo, indicar el nombre del destinatario y agregar algun mensaje.</li>
+                <li>Arma tu pastel. Completa el formulario con todas las opciones para customizar el pastel.</li>
+                <li>Ingresa tus datos de pago.</li>
+                <li>Realiza el pedido.</li>
+              </ol>
+            </article>
+          </div>
+        </div>
+      </section>
 
     </main>
 
