--- a/index.html
+++ b/index.html
@@ -171,6 +171,31 @@
           </div>
         </div>
       </section>
+      <section id="datoscliente" class="section" aria-labelledby="datoscliente-title">
+        <div class="container">
+          <header class="section-head">
+            <h2 id="datoscliente-title">Datos del cliente</h2>
+          </header>
+          <form action="#" class="form card" method="post">
+            <fieldset>
+              <legend>Datos del cliente</legend>
+              <div class="form-row">
+                <label for="name">Nombre</label>
+                <input type="text" name="name" id="name" required placeholder="Tu nombre completo"/>
+              </div>
+              <div class="form-row">
+                <label for="email">Correo</label>
+                <input type="email" id="email" name="email" required placeholder="correo@ejemplo.com" autocomplete="email"/>
+              </div>
+              <div class="form-row">
+                <label for="telefono">Telefono</label>
+                <input type="tel" name="telefono" id="telefono" required placeholder="Tu numero de telefono"/>
+              </div>
+            </fieldset>
+          </form>
+        </div>
+
+      </section>
 
     </main>
 
