Agregando footer de la pagina

--- a/index.html
+++ b/index.html
@@ -337,6 +337,16 @@
         </div>
       </section>
     </main>
-
+    <footer class="site-footer">
+      <div class="container footer-inner">
+        <p>&copy; 2026 Cake-to-go</p>
+        <nav aria-label="Otros enlaces" class="footer-links">
+          <a href="#">Terminos</a>
+          <a href="#">Condiciones</a>
+          <a href="#">Devoluciones y reembolsos</a>
+          <a href="#">FAQ</a>
+        </nav>        
+      </div>
+    </footer>
   </body>
 </html>
