En el formulario para armar el pastel agregando para cuantas personas es cada tamanio de pastel

--- a/index.html
+++ b/index.html
@@ -242,13 +242,13 @@
               <div class="form-row">
                   <p>Tamanio del pastel:</p>
                   <input type="radio" id="mini" name="tamanio_pastel" value="mini">
-                  <label for="mini">Mini</label><br>
+                  <label for="mini">Mini (2-3 personas)</label><br>
                   <input type="radio" id="chico" name="tamanio_pastel" value="chico">
-                  <label for="chico">Chico</label><br>
+                  <label for="chico">Chico (4-5 personas)</label><br>
                   <input type="radio" id="mediano" name="tamanio_pastel" value="mediano">
-                  <label for="mediano">Mediano</label><br>
+                  <label for="mediano">Mediano (6-8 personas)</label><br>
                   <input type="radio" id="grande" name="tamanio_pastel" value="grande">
-                  <label for="grande">Grande</label>
+                  <label for="grande">Grande (10-12 personas)</label>
               </div>
               <div class="form-row">
                   <p>Sabor del pan:</p>
