El boton de "Ordena tu pastel" en el hero ahora te lleva a la seccion donde haces un pedido

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               persona. 
             </p>
             <div class="cta-row">
-              <a href="#registro" class="bti">Ordena tu pastel</a>
+              <a href="#datoscliente" class="bti">Ordena tu pastel</a>
             </div>
             <dl class="stats" aria-label="Indicadores del curso">
               <div class="stat">
