Reestructurando la navegacion. Agregando archivo css basado en ejemplo de la clase. Dandole estilo al nav bar

--- a/index.html
+++ b/index.html
@@ -4,23 +4,23 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Cake-to-go</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body> 
-    <a href="contenido" class="skip-link">Saltar contenido</a>
     <header class="site-header">
-      <div class="container header-inner">
-        <a href="#" class="brand" aria-label="Ir al inicio">
-          <span class="brand-mark">C</span>
-          <span class="brand-name">Cake-to-go</span>
-        </a>
-        <nav class="nav" aria-label="Navegacion principal">
-          <a href="#nosotros">Sobre nosotros</a>
-          <a href="#nuestrospasteles">Conoce nuestros pasteles</a>
-          <a href="#reviews">Reviews de clientes</a>
-          <a href="#proceso">Pasos para pedir un pastel</a>
-          <a href="#ordena" class="btn btn--sm">Realiza tu pedido</a>
+        <nav class="nav-container">
+          <a href="#" class="logo-container">
+            <span class="logo-text">Cake-to-go</span>
+          </a>
+          <ul class="nav-menu">
+            <li><a href="#contenido" class="nav-link">Inicio</a></li>
+            <li><a href="#nosotros" class="nav-link">Nosotros</a></li>
+            <li><a href="#pasteles" class="nav-link">Nuestros Pasteles</a></li>
+            <li><a href="#reviews" class="nav-link">Reviews</a></li>
+            <li><a href="#proceso" class="nav-link">Proceso</a></li>
+            <li><a href="#datoscliente" class="nav-link active">Realiza tu pedido</a></li>
+          </ul>
         </nav>
-      </div>
     </header>
     <main id="contenido">
       <section class="hero" aria-labelledby="hero-title">
