Agregando una imagen de fondo al Hero y dandole formato al boton para ordenar

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
               persona. 
             </p>
             <div class="cta-row">
-              <a href="#datoscliente" class="bti">Ordena tu pastel</a>
+              <a href="#datoscliente" class="btn">Ordena tu pastel</a>
             </div>
             <dl class="stats" aria-label="Indicadores del curso">
               <div class="stat">
@@ -45,13 +45,6 @@
               </div>
             </dl>
           </div>
-          <figure class="hero-card">
-            <div class="hero-visual" aria-hidden="true"></div>
-            <figcaption>
-              Si no estas seguro del pastel que deseas, nosotros podemos darte ejemplos e ideas de pasteles
-              que hemos elaborado anteriormente y han sido populares con los clientes.
-            </figcaption>
-          </figure>
         </div>
       </section>
       <section id="nosotros" class="section" aria-labelledby="nosotros-title">
