Dandole formato a los formularios y al footer de la pagina

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <h1 id="hero-title">El pastel que quieras entregado a donde quieras</h1>
             <p class="lead">
               Arma y ordena el pastel exactamente como lo necesitas. Eliges el tamaño, sabor, color y diseño.
-              Una vez armado tu pastel dinos a donde debemos entregarlo. Puede ser a ti mismo o como regalo para otra 
+              Una vez armado tu pastel dinos a dónde debemos entregarlo. Puede ser a ti mismo o como regalo para otra 
               persona. 
             </p>
             <div class="cta-row">
@@ -72,7 +72,7 @@
       </section>
       <section id="pasteles" class="section" aria-labelledby="pasteles-title">
         <div class="container">
-          <header class="pasteles-head">
+          <header class="section-head">
             <h2 id="pasteles-title">Ejemplos de pasteles</h2>
             <p>Imágenes de algunos pasteles que hemos elaborado</p>
           </header>
@@ -169,7 +169,7 @@
           <header class="section-head">
             <h2 id="datoscliente-title">Datos del cliente</h2>
           </header>
-          <form action="#" class="form card" method="post">
+          <form action="#" class="form-pedido" method="post">
             <fieldset>
               <legend>Datos del cliente</legend>
               <div class="form-row">
@@ -193,7 +193,7 @@
           <header class="section-head">
             <h2 id="domicilio-title">Domicilio de entrega</h2>
           </header>
-          <form action="#" class="form card" method="post">
+          <form action="#" class="form-pedido" method="post">
             <fieldset>
               <legend>Dirección para entrega</legend>
               <div class="form-row">
@@ -229,7 +229,7 @@
           <header class="section-head">
             <h2 id="opcionespastel-title">Arma tu pastel</h2>
           </header>
-          <form action="#" class="form card" method="post">
+          <form action="#" class="form-pedido" method="post">
             <fieldset>
               <legend>Arma tu pastel</legend>
               <div class="form-row">
@@ -302,7 +302,7 @@
           <header class="section-head">
             <h2 id="datospago-title">Datos del pago</h2>
           </header>
-          <form action="#" class="form card" method="post">
+          <form action="#" class="form-pedido" method="post">
             <fieldset>
               <legend>Datos de la tarjeta para hacer el pago</legend>
               <div class="form-row">
