--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <li><a href="#contenido" class="nav-link">Inicio</a></li>
             <li><a href="#nosotros" class="nav-link">Nosotros</a></li>
             <li><a href="#pasteles" class="nav-link">Nuestros Pasteles</a></li>
-            <li><a href="#reviews" class="nav-link">Reviews</a></li>
+            <li><a href="#reviews" class="nav-link">Reseñas</a></li>
             <li><a href="#proceso" class="nav-link">Proceso</a></li>
             <li><a href="#datoscliente" class="nav-link active">Realiza tu pedido</a></li>
           </ul>
@@ -107,7 +107,7 @@
       <section class="section" id="reviews" aria-labelledby="testimonios-title">
         <div class="container">
           <header class="section-head">
-            <h2 id="testimomios-title">Reviews de clientes</h2>
+            <h2 id="testimomios-title">Reseñas de clientes</h2>
             <p>Reseñas de clientes que ya recibieron sus pasteles</p>
           </header>
           <div class="grid-3">
@@ -167,7 +167,7 @@
       <section id="datoscliente" class="section" aria-labelledby="datoscliente-title">
         <div class="container">
           <header class="section-head">
-            <h2 id="datoscliente-title">Datos del cliente</h2>
+            <h2 id="datoscliente-title">Realiza tu pedido</h2>
           </header>
           <form action="#" class="form-pedido" method="post">
             <fieldset>
@@ -184,147 +184,7 @@
                 <label for="telefono">Teléfono</label>
                 <input type="tel" name="telefono" id="telefono" required placeholder="Tu numero de telefono"/>
               </div>
-            </fieldset>
-          </form>
-        </div>
-      </section>
-      <section id="domicilio" class="section" aria-labelledby="domicilio-title">
-        <div class="container">
-          <header class="section-head">
-            <h2 id="domicilio-title">Domicilio de entrega</h2>
-          </header>
-          <form action="#" class="form-pedido" method="post">
-            <fieldset>
-              <legend>Dirección para entrega</legend>
-              <div class="form-row">
-                <label for="namedest">Nombre destinatario</label>
-                <input type="text" name="namedest" id="namedest" required placeholder="Nombre del destinatario"/>
-              </div>
-              <div class="form-row">
-                <label for="calle">Calle</label>
-                <input type="text" name="calle" id="calle" required placeholder="Nombre de la calle"/>
-              </div>
-              <div class="form-row">
-                <label for="numeroext">Numero exterior</label>
-                <input type="number" id="numeroext" name="numeroext" required placeholder="Numero"/>
-              </div>
-              <div class="form-row">
-                <label for="colonia">Colonia</label>
-                <input type="text" name="colonia" id="colonia" required placeholder="Nombre de la colonia"/>
-              </div>
-              <div class="form-row">
-                <label for="mensaje">Mensaje para el destinatario</label>
-                <textarea name="mensaje" id="mensaje" rows="4" placeholder="Dedicatoria para el destinatario"></textarea>
-              </div>
-              <div class="form-row">
-                <label for="notas">Notas adicionales</label>
-                <textarea name="notas" id="notas" rows="4" placeholder="Notas adicionales sobre tu pedido"></textarea>
-              </div>        
-            </fieldset>
-          </form>
-        </div>
-      </section>
-      <section id="opcionespastel" class="section" aria-labelledby="opcionespastel-title">
-        <div class="container">
-          <header class="section-head">
-            <h2 id="opcionespastel-title">Arma tu pastel</h2>
-          </header>
-          <form action="#" class="form-pedido" method="post">
-            <fieldset>
-              <legend>Arma tu pastel</legend>
-              <div class="form-row">
-                  <p>Tamaño del pastel:</p>
-                  <input type="radio" id="mini" name="tamanio_pastel" value="mini">
-                  <label for="mini">Mini (2-3 personas)</label><br>
-                  <input type="radio" id="chico" name="tamanio_pastel" value="chico">
-                  <label for="chico">Chico (4-5 personas)</label><br>
-                  <input type="radio" id="mediano" name="tamanio_pastel" value="mediano">
-                  <label for="mediano">Mediano (6-8 personas)</label><br>
-                  <input type="radio" id="grande" name="tamanio_pastel" value="grande">
-                  <label for="grande">Grande (10-12 personas)</label>
-              </div>
-              <div class="form-row">
-                  <p>Sabor del pan:</p>
-                  <input type="radio" id="choco" name="sabor_pan" value="choco">
-                  <label for="choco">Chocolate</label><br>
-                  <input type="radio" id="vainilla" name="sabor_pan" value="vainilla">
-                  <label for="vainilla">Vainilla</label><br>
-                  <input type="radio" id="zanahoria" name="sabor_pan" value="zanahoria">
-                  <label for="zanahoria">Zanahoria</label><br>
-                  <input type="radio" id="redvelvet" name="sabor_pan" value="redvelvet">
-                  <label for="redvelvet">Red Velvet</label><br>
-                  <input type="radio" id="tresleches" name="sabor_pan" value="tresleches">
-                  <label for="tresleches">Tres Leches</label>
-              </div>
-              <div class="form-row">
-                  <p>Relleno:</p>
-                  <input type="radio" id="mermelada" name="relleno" value="mermelada">
-                  <label for="mermelada">Mermelada</label><br>
-                  <input type="radio" id="queso_crema" name="relleno" value="queso_crema">
-                  <label for="queso_crema">Queso crema</label><br>
-                  <input type="radio" id="nutella" name="relleno" value="nutella">
-                  <label for="nutella">Nutella</label><br>
-                  <input type="radio" id="cajeta" name="relleno" value="cajeta">
-                  <label for="cajeta">Cajeta</label>
-              </div>
-              <div class="form-row">
-                  <p>Extras:</p>
-                  <input type="radio" id="ninguno" name="extras" value="ninguno">
-                  <label for="ninguno">Ninguno</label><br>
-                  <input type="radio" id="nueces" name="extras" value="nueces">
-                  <label for="nueces">Nueces</label><br>
-                  <input type="radio" id="almendras" name="extras" value="almendras">
-                  <label for="almendras">Almendras</label><br>
-                  <input type="radio" id="chispas" name="extras" value="chispas">
-                  <label for="chispas">Chispas de chocolate</label>
-              </div>              
-              <div class="form-row">
-                <p>Color del betún:</p>
-                <label for="colorbetun">Selecciona el color para el betún:</label>
-                <input type="color" id="colorbetun" name="colorbetun" value="#ff0000">
-              </div>
-              <div class="form-row">
-                <p>Qué quieres que diga tu pastel?:</p>
-                <label for="msjpastel">Mensaje para el pastel:</label>
-                <input type="text" name="msjpastel" id="msjpastel" required placeholder="Feliz cumpleaños"/>
-              </div>
-              <div class="form-row">
-                <p>Quieres alguna decoración en específico? Descríbela aqui:</p>
-                <label for="descr_decoracion">Decoración:</label>
-                <textarea name="descr_decoracion" id="descr_decoracion" rows="4" placeholder="Describe la decoración para tu pastel"></textarea>
-              </div>              
-            </fieldset>
-          </form>
-        </div>
-      </section>
-      <section id="datospago" class="section" aria-labelledby="datospago-title">
-        <div class="container">
-          <header class="section-head">
-            <h2 id="datospago-title">Datos del pago</h2>
-          </header>
-          <form action="#" class="form-pedido" method="post">
-            <fieldset>
-              <legend>Datos de la tarjeta para hacer el pago</legend>
-              <div class="form-row">
-                <label for="nombretarjeta">Nombre en la tarjeta</label>
-                <input type="text" name="nombretarjeta" id="nombretarjeta" required placeholder="Nombre en la tarjeta"/>
-              </div>
-              <div class="form-row">
-                <label for="numerotarjeta">Número de la tarjeta</label>
-                <input type="number" id="numerotarjeta" name="numerotarjeta"/>
-              </div>
-              <div class="form-row">
-                <label for="vencimiento">Fecha de vencimiento</label>
-                <input type="text" name="vencimiento" id="vencimiento"/>
-              </div>
-              <div class="form-row">
-                <label for="cvv">Código de seguridad</label>
-                <input type="number" name="cvv" id="cvv"/>
-              </div>
-              <div class="form-action">
-                <button class="btn" type="submit">Pagar y realizar pedido (próximamente)</button>
-                <p>Al pagar se hará llegar tu pedido a cake-to-go.</p>
-              </div>
+              <a href="domicilio.html" class="nav-link active">Ingresa el domicilio</a>
             </fieldset>
           </form>
         </div>
