Dando formato en especifico a las secciones con radio buttons

--- a/customiza.html
+++ b/customiza.html
@@ -12,10 +12,10 @@
           <header class="section-head">
             <h2 id="opcionespastel-title">Arma tu pastel</h2>
           </header>
-          <form action="#" class="form-pedido" method="post">
+          <form action="#" class="form-pastel" method="post">
             <fieldset>
               <legend>Arma tu pastel</legend>
-              <div class="form-row">
+              <div class="form-rowradio">
                   <p>Tamaño del pastel:</p>
                   <input type="radio" id="mini" name="tamanio_pastel" value="mini">
                   <label for="mini">Mini (2-3 personas)</label><br>
@@ -26,7 +26,7 @@
                   <input type="radio" id="grande" name="tamanio_pastel" value="grande">
                   <label for="grande">Grande (10-12 personas)</label>
               </div>
-              <div class="form-row">
+              <div class="form-rowradio">
                   <p>Sabor del pan:</p>
                   <input type="radio" id="choco" name="sabor_pan" value="choco">
                   <label for="choco">Chocolate</label><br>
@@ -39,7 +39,7 @@
                   <input type="radio" id="tresleches" name="sabor_pan" value="tresleches">
                   <label for="tresleches">Tres Leches</label>
               </div>
-              <div class="form-row">
+              <div class="form-rowradio">
                   <p>Relleno:</p>
                   <input type="radio" id="mermelada" name="relleno" value="mermelada">
                   <label for="mermelada">Mermelada</label><br>
@@ -50,7 +50,7 @@
                   <input type="radio" id="cajeta" name="relleno" value="cajeta">
                   <label for="cajeta">Cajeta</label>
               </div>
-              <div class="form-row">
+              <div class="form-rowradio">
                   <p>Extras:</p>
                   <input type="radio" id="ninguno" name="extras" value="ninguno">
                   <label for="ninguno">Ninguno</label><br>
