Agregando una imagen a la seccion "sobre nosotros"

--- a/index.html
+++ b/index.html
@@ -54,19 +54,22 @@
             <p>Conoce sobre cómo surgió esta idea</p>
           </header>
           <div class="nosotros-body">
-            <p>En la mayoría de las pastelerías te solicitan mínimo 5 días de anticipación para hacer un pedido personalizado.
+            <div class="nosotros-text">
+              <p>En la mayoría de las pastelerías te solicitan mínimo 5 días de anticipación para hacer un pedido personalizado.
               Otras pocas te ofrecen opciones ya listas para cuando necesitas un pastel de último momento. Sin embargo,
               las opciones son limitadas y no se adhieren a las preferencias del cliente. Además de esto, debes ir 
               personalmente a la pastelería a recoger tu pedido. Esto es complicado cuando tienes apuro o tu pastelería
-              favorita queda a una distancia considerable de tu ubicación.
+              favorita queda a una distancia considerable de tu ubicación.<br>
               Nosotros resolvemos todo esto. No tenemos un mínimo de días para hacer un pedido personalizado. Aún si tu
-              pedido es de último momento, nosotros podemos realizarlo. Con nosotros no tienes que conformarte con opciones
-              limitadas. Puedes armar tu pastel casi de cualquier manera que puedas imaginarte. Además de esto, ofrecemos
-              entrega a domicilio para que no tengas que venir hasta aca por tu pastel. Quieres obsequiar el pastel a alguien
-              más? Nosotros lo llevamos hasta donde esté. Puedes agregar una dedicatoria a la persona para que sepa quién
-              le está regalando el pastel. 
+              pedido es de último momento, nosotros podemos realizarlo. Puedes armar tu pastel casi de cualquier manera que puedas imaginarte. 
+              Además ofrecemos entrega a domicilio para que no tengas que venir hasta aca por tu pastel. Quieres obsequiar el pastel a alguien
+              más? Nosotros lo llevamos hasta donde esté. 
               Así que no te preocupes, cualquier pastel que necesites de urgencia, nosotros te tenemos cubierto.
             </p>
+            </div>
+            <div class="nosotros-image">
+              <img src="https://images.yummy.ph/yummy/uploads/2021/01/breadbakingingredients.jpg" alt="hornear"/>
+            </div>                
           </div>
         </div>
       </section>
