Actualizando la seccion de "resenas de clientes". Agregando formato

--- a/index.html
+++ b/index.html
@@ -114,37 +114,53 @@
             <p>Reseñas de clientes que ya recibieron sus pasteles</p>
           </header>
           <div class="grid-3">
-            <figure class="quote card">
-              <blockquote>
-                "Pedí un pastel para el cumpleaños de mi novia y le encantó. Lo entregaron en su casa bastante rápido."
-              </blockquote>
-              <figcaption>-Sergio</figcaption>
-            </figure>
-            <figure class="quote card">
-              <blockquote>
-                "Habíamos pedido un pastel para el bautizo de mi sobrino en otra pastelería pero nos quedaron mal un día
-                antes del evento. Por fortuna en cake-to-go nos pudieron hacer un pastel tal como queríamos a pesar de 
-                pedirlo con poco tiempo de anticipación. Nos salvaron."
-              </blockquote>
-              <figcaption>-Luis</figcaption>
-            </figure>
-            <figure class="quote card">
-              <blockquote>
-                "Estuve muy resfriada el día que cumplía años mi mejor amiga. De verdad quería darle un regalo pero
-                no podía salir de mi casa. Por suerte mi hermana me recomendó cake-to-go y pude mandarle un bonito
-                pastel a mi amiga de regalo."
-              </blockquote>
-              <figcaption>-Laura</figcaption>
-            </figure>
-            <figure class="quote card">
-              <blockquote>
-                "Había visto un pastel muy bonito en Pinterest y quería uno igual para mi cumpleaños. Fui a varias
-                pastelerías pero en todas me dijeron que no podían hacerlo igual, solo parecido. En cake-to-go me 
-                aseguraron que podían hacer uno practicamente igual. La verdad el que me entregaron era aún más
-                bonito que el de Pinterest. Muy recomendado"
-              </blockquote>
-              <figcaption>-Clau</figcaption>
-            </figure>
+            <div class="resena-individual">
+              <div class="estrellas">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+              <p>"Habíamos pedido un pastel para el bautizo de mi sobrino en otra pastelería pero nos quedaron mal un día
+                  antes del evento. Por fortuna en cake-to-go nos pudieron hacer un pastel tal como queríamos a pesar de 
+                  pedirlo con poco tiempo de anticipación. Nos salvaron."</p>
+              <div class="autor-resena">
+                <img src="https://img.freepik.com/foto-gratis/familia-hogar_23-2148166842.jpg?semt=ais_hybrid&w=740&q=80" alt="autor">
+                <div>
+                  <strong>Luis</strong>
+                </div>
+              </div>
+            </div>
+            <div class="resena-individual">
+              <div class="estrellas">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+              <p>"Estuve muy resfriada el día que cumplía años mi mejor amiga. De verdad quería darle un regalo pero
+                  no podía salir de mi casa. Por suerte mi hermana me recomendó cake-to-go y pude mandarle un bonito
+                  pastel a mi amiga de regalo."</p>
+              <div class="autor-resena">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSKRUZ3_rZzy98LrQuxs4weJzjOFtAHwr1NaA&s" alt="autor">
+                <div>
+                  <strong>Laura</strong>
+                </div>
+              </div>
+            </div>
+            <div class="resena-individual">
+              <div class="estrellas">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+              <p>"Había visto un pastel muy bonito en Pinterest y quería uno igual para mi cumpleaños. Fui a varias
+                  pastelerías pero en todas me dijeron que no podían hacerlo igual, solo parecido. En cake-to-go me 
+                  aseguraron que podían hacer uno practicamente igual. La verdad el que me entregaron era aún más
+                  bonito que el de Pinterest. Muy recomendado"</p>
+              <div class="autor-resena">
+                <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSUd4oSev3-H-OEKifmV2wqiDg0L39Sscq5UA&s" alt="autor">
+                <div>
+                  <strong>Clau</strong>
+                </div>
+              </div>
+            </div>     
+            <div class="resena-individual">
+              <div class="estrellas">&#9733;&#9733;&#9733;&#9733;&#9733;</div>
+              <p>"Pedí un pastel para el cumpleaños de mi novia y le encantó. Lo entregaron en su casa bastante rápido."</p>
+              <div class="autor-resena">
+                <img src="https://t3.ftcdn.net/jpg/05/01/01/84/360_F_501018486_SQE0vK8bwMaFAbsHbp5JV2r1rnE1hT9z.jpg" alt="autor">
+                <div>
+                  <strong>Sergio</strong>
+                </div>
+              </div>
+            </div>  
           </div>
         </div>
       </section>
