Dando formato a la seccion "pasos a seguir para ordenar"

--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
           <header class="section-head">
             <h2 id="temario-title">Pasos a seguir para ordenar</h2>
           </header>
-          <div class="grid-4">
-            <article class="card">
+          <div class="wrapper">
               <ol class="list">
                 <li>Llenar el formulario con los datos del cliente. </li>
                 <li>Llenar la dirección a la cual vamos a entregar el pastel. </li>
@@ -179,7 +178,6 @@
                 <li>Ingresa tus datos de pago.</li>
                 <li>Realiza el pedido.</li>
               </ol>
-            </article>
           </div>
         </div>
       </section>
