1. Dandole estilo a los botones para avanzar en el proceso de pedido 2. Agregando una pagina de "proximamente" para redireccionar los links del footer

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
               </div>
               <div class="form-row">
                 <label for="telefono">Teléfono</label>
-                <input type="tel" name="telefono" id="telefono" required placeholder="Tu numero de telefono"/>
+                <input type="tel" name="telefono" id="telefono" required placeholder="Tu número de telefono"/>
               </div>
-              <a href="domicilio.html" class="nav-link active">Ingresa el domicilio</a>
+              <a href="domicilio.html" class="proceso-link">Ingresa el domicilio</a>
             </fieldset>
           </form>
         </div>
@@ -211,10 +211,10 @@
       <div class="container footer-inner">
         <p>&copy; 2026 Cake-to-go</p>
         <nav aria-label="Otros enlaces" class="footer-links">
-          <a href="#">Términos</a>
-          <a href="#">Condiciones</a>
-          <a href="#">Devoluciones y reembolsos</a>
-          <a href="#">FAQ</a>
+          <a href="proximamente.html">Términos</a>
+          <a href="proximamente.html">Condiciones</a>
+          <a href="proximamente.html">Devoluciones y reembolsos</a>
+          <a href="proximamente.html">FAQ</a>
         </nav>        
       </div>
     </footer>
