1.Cambiando el texto de los botones para el proceso de pedido a "siguiente" 2.Deshabilitando el boton de pagar y realizar pedido para que no haga nada

--- a/customiza.html
+++ b/customiza.html
@@ -76,7 +76,7 @@
                 <label for="descr_decoracion">Decoración:</label>
                 <textarea name="descr_decoracion" id="descr_decoracion" rows="4" placeholder="Describe la decoración para tu pastel"></textarea>
               </div>    
-              <a href="pago.html" class="proceso-link">Realiza tu pago</a>          
+              <a href="pago.html" class="proceso-link">Siguiente</a>          
             </fieldset>
           </form>
         </div>
