--- a/domicilio.html
+++ b/domicilio.html
@@ -39,7 +39,7 @@
                 <label for="notas">Notas adicionales</label>
                 <textarea name="notas" id="notas" rows="4" placeholder="Notas adicionales sobre tu pedido"></textarea>
               </div>
-              <a href="customiza.html" class="proceso-link">Arma tu pastel</a>        
+              <a href="customiza.html" class="proceso-link">Siguiente</a>        
             </fieldset>
           </form>
         </div>
