--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
                 <label for="telefono">Teléfono</label>
                 <input type="tel" name="telefono" id="telefono" required placeholder="Tu número de telefono"/>
               </div>
-              <a href="domicilio.html" class="proceso-link">Ingresa el domicilio</a>
+              <a href="domicilio.html" class="proceso-link">Siguiente</a>
             </fieldset>
           </form>
         </div>
