--- a/pago.html
+++ b/pago.html
@@ -32,7 +32,7 @@
                 <input type="number" name="cvv" id="cvv"/>
               </div>
               <div class="form-action">
-                <button class="btn" type="submit">Pagar y realizar pedido (próximamente)</button>
+                <button class="btn" type="button">Pagar y realizar pedido (próximamente)</button>
                 <p>Al pagar se hará llegar tu pedido a cake-to-go.</p>
               </div>
               <a href="index.html" class="nav-link active">Volver al inicio</a>   
